[bumpversion]
current_version = 0.1.dev0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>.+)
serialize =
    {major}.{minor}.{patch}
commit = True
tag = False

[bdist_wheel]
universal = 1

[metadata]
description-file =
    README.md

[bumpversion:file:ophelia/__init__.py]

[bumpversion:file:docs/conf.py]

[bumpversion:file:jenkins-config.json]

[bumpversion:file:Makefile]

[bumpversion:file:setup.py]

[flake8]
exclude = build,.git,.tox
max-line-length = 119

[tool:pytest]
norecursedirs = venv .tox

