[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bdist_wheel]
universal = 1

[metadata]
description-file =
    README.md

[bumpversion:file:ophelia/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[flake8]
statistics = 1
exclude = build,.git,.tox
max-line-length = 119

[tool:pytest]
norecursedirs = venv .tox
